--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -312,6 +312,24 @@
     - 混乱核心:1:3
     - 冰川核心:1:3
     - 日光核心:1:3
+死灵晶簇:
+  1:
+    giveAllItems: false
+    items:
+    - 寒元锭:7:12
+    - 永恒锭:7:12
+    - 熔渣锭:7:12
+  2:
+    giveAllItems: false
+    items:
+    - 混乱核心:2:4
+    - 冰川核心:2:4
+    - 日光核心:2:4
+  3:
+    items:
+    - 灾劫核心:1:1:0.5
+    - 生命合金
+    - 血石:120:140
 # 所有专家模式福袋都在下方按克苏鲁之眼福袋的格式写
 专家模式福袋:
   史莱姆王:
