material, tool and other sprites

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -161,6 +161,9 @@ skins.160=160
 skins.161=161
 skins.162=162
 skins.163=163
+skins.164=164
+skins.165=165
+skins.166=166
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -325,3 +328,6 @@ name.160=\u6bc1\u706d\u9b54\u50cf\u817f\u00a72
 name.161=\u6bc1\u706d\u9b54\u50cf\u5bfc\u5f39
 name.162=\u77f3\u5143\u67f1
 name.163=\u9ca8\u9c7c\u65cb\u98ce
+name.164=\u8718\u86db\u5973\u738b
+name.165=\u6708\u4eae\u4f20\u9001\u95e8
+name.166=\u4e03\u5f69\u6c34\u6676
