--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -164,6 +164,20 @@ skins.163=163
 skins.164=164
 skins.165=165
 skins.166=166
+skins.167=167
+skins.168=168
+skins.169=169
+skins.170=170
+skins.171=171
+skins.172=172
+skins.173=173
+skins.174=174
+skins.175=175
+skins.176=176
+skins.177=177
+skins.178=178
+skins.179=179
+skins.180=180
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -331,3 +345,17 @@ name.163=\u9ca8\u9c7c\u65cb\u98ce
 name.164=\u8718\u86db\u5973\u738b
 name.165=\u6708\u4eae\u4f20\u9001\u95e8
 name.166=\u4e03\u5f69\u6c34\u6676
+name.167=
+name.168=
+name.169=
+name.170=
+name.171=
+name.172=
+name.173=
+name.174=
+name.175=
+name.176=
+name.177=
+name.178=
+name.179=
+name.180=
